--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
     background-color: white;
     font-family: "Lato", sans-serif;
@@ -18,8 +18,17 @@ nav li {
     line-height: 40px;
     height: 40px;
     display: inline-block;
-    margin: 2.5%;
+    margin: 1.5%;
 }
+
+nav img {
+    width: 75px;
+    height: 50px;
+
+}
+
+
+
 
 nav a {
     text-decoration: none;
@@ -27,8 +36,9 @@ nav a {
     display: block;
 }
 
-nav a:hover {
+nav img:hover {
     color: red;
+    border: 0.5px solid red;
 }
 
 h1 {
@@ -47,6 +57,7 @@ h1 {
    display: inline-block;
    margin: 1%;
 }
+
 .main img{
     max-width: 100vh;
     height: auto;
