--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 body {
     margin: 0 auto;
     padding: 0;
-    background-color: white;
+    background-color: #009bb4;
     font-family: "Lato", sans-serif;
     text-align: center;
    
 }
 nav ul {
     list-style-type: none;
-    background-color: white;
+    background-color: #007a8c;
     text-align: center;
     margin: 0;
 }
@@ -37,8 +37,7 @@ nav a {
 }
 
 nav img:hover {
-    color: red;
-    border: 0.5px solid red;
+    border: 0.5px solid rgb(22, 22, 145);
 }
 
 h1 {
@@ -49,18 +48,35 @@ h1 {
 /*Main*/
 .main{
     padding: 50px 0 50px 0;
-    margin:auto;
+    border: 2px solid white;
+}
+
+.match-selector{
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 25% 25% 25% 25%;
+}
+
+.match-selector div{   
+
+    padding: 2rem;
+    color: black;
+    border: 2px green solid;
 }
 
 .main div a{
    text-decoration: none;
    display: inline-block;
    margin: 1%;
+   border: 5px red solid;
+   color: black;
+
 }
 
 .main img{
-    max-width: 100vh;
-    height: auto;
+    width: 8rem;
+    height: 5rem;
+    border: 0.5px black solid;
 }
 
 /*Croatia*/
