--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 header {
-    padding: 0.5rem, 0, 0.5, 0;
+    padding: 0.5rem 0 0.5rem 0;
     background-color: rgba(0,0,0,0.7);
 }
 
@@ -106,13 +106,13 @@ nav img:hover {
 }
 
 .main div p{
-    padding: 1%, 0, 0, 2rem;
+    padding: 1% 0 0 1rem;
 }
 
 .main img{
     width: 8rem;
     height: 5rem;
-    border: 0.5px black solid;
+    border: 0.1px black solid;
 }
 
 /*England Page */
@@ -141,7 +141,21 @@ nav img:hover {
 }
 
 /* Footer */
+
 footer{
-    height: 4rem;
-    background-color: #004a55;
+    position: static;
+    bottom: 0;
+    padding: 2%;
+    text-align: center;
+    color: red;
+    background-color: rgba(0,0,0,0.7);
+}
+
+footer a {
+    padding: 5%;
+    color: white;
+}
+
+footer a:hover {
+    opacity: 0.5;
 }
