--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,9 @@ h2, h3{
     color: white;
 }
 /* Navbar */
+nav{
+    width: 100%;
+}
 
 nav ul {
     list-style-type: none;
@@ -59,10 +62,16 @@ nav img:hover {
 
 
 /* Landing Page */
+#hero-img{
+    height: 400px;
+    width: 100%;
+    background:url("../images/england_fc_logo.png") center center / 400px 400px repeat-x ;
 
+}
 .main{
     padding: 50px 0 50px 0;
     color: white;
+    overflow: hidden;
 }
 
 .match-selector{
@@ -78,7 +87,10 @@ nav img:hover {
     border-bottom-style: solid;
     border-width: 2px;
     border-color: #007a8c;
+ 
 }
+
+
 
 .main div a{
    text-decoration: none;
@@ -86,10 +98,9 @@ nav img:hover {
    margin: 1%;
    color: white;
    font-weight: 900;
-   border-top-style: solid;
-   border-bottom-style: solid;
-   border-width: 2px;
-   border-color: white;
+   border: 1.2px solid navy;
+   border-style: solid none solid none;
+
    transition: font-size 0.25s;
    transition-timing-function: ease-in-out;
    background-color: #004a55;
@@ -112,7 +123,6 @@ nav img:hover {
 .main img{
     width: 8rem;
     height: 5rem;
-    border: 0.1px black solid;
 }
 
 /*England Page */
@@ -146,7 +156,6 @@ footer{
     position: static;
     bottom: 0;
     padding: 2%;
-    text-align: center;
     color: red;
     background-color: rgba(0,0,0,0.7);
 }
@@ -158,4 +167,8 @@ footer a {
 
 footer a:hover {
     opacity: 0.5;
+}
+
+footer div {
+    display: inline;
 }
