--- a/css/style.css
+++ b/css/style.css
@@ -26,11 +26,12 @@ body {
   /* Navbar */
   nav {
     width: 100%;
+    background-color: #004a55;
   }
   
   nav ul {
     list-style-type: none;
-    background-color: #004a55;
+
     text-align: center;
     margin: 0;
     padding: 0.5rem;
@@ -144,6 +145,7 @@ body {
     display: flex;
     justify-content: space-evenly;
     border: 2px solid red;
+    overflow: hidden;
   }
   .england #div1 {
     border: 2px dashed white;
