--- a/css/style.css
+++ b/css/style.css
@@ -1,242 +1,259 @@
 /* General Styling */
 body {
-    margin: 0 auto;
-    padding: 0;
-    background-color: #007a8c;
-    font-family: "Lato", sans-serif;
-    text-align: center;
-  }
-  
-  header {
-    padding: 0.5rem 0 0.5rem 0;
-    background-color: rgba(0, 0, 0, 0.7);
-  }
-  
-  h1 {
-    font-family: "Tourney", cursive;
-    color: red;
-    margin-top: 1%;
-    margin-bottom: 2%;
-  }
-  
-  h2,
-  h3 {
-    color: white;
-  }
-  /* Navbar */
-  nav {
-    width: 100%;
-    background-color: #004a55;
-  }
-  
-  nav ul {
-    list-style-type: none;
+  margin: 0 auto;
+  padding: 0;
+  background-color: #007a8c;
+  font-family: "Lato", sans-serif;
+  text-align: center;
+}
 
-    text-align: center;
-    margin: 0;
-    padding: 0.5rem;
-  }
-  
-  nav li {
-    font-size: 1.2em;
-    line-height: 40px;
-    height: 40px;
-    display: inline-block;
-    margin: 1.5%;
-  }
-  
-  nav img {
-    width: 75px;
-    height: 50px;
-  }
-  
-  nav a {
-    text-decoration: none;
-    color: navy;
-    display: block;
-  }
-  
-  nav img:hover {
-    opacity: 0.4;
-  }
-  
-  /* Landing Page */
-  #hero-img {
-    height: 400px;
-    width: 100%;
-    background: url("../images/england_fc_logo.png") center center / 400px 400px
-      repeat-x;
-  }
-  .main {
-    padding: 50px 0 50px 0;
-    color: white;
-    overflow: hidden;
-  }
-  
-  .match-selector {
-    display: grid;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: 25% 25% 25% 25%;
-  }
-  
-  .match-selector div {
-    padding: 2rem;
-    color: black;
-    border-top-style: solid;
-    border-bottom-style: solid;
-    border-width: 2px;
-    border-color: #007a8c;
-  }
+header {
+  padding: 0.5rem 0 0.5rem 0;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+h1 {
+  font-family: "Tourney", cursive;
+  color: red;
+  margin-top: 1%;
+  margin-bottom: 2%;
+}
+
+h2,
+h3 {
+  color: white;
+}
+/* Navbar */
+nav {
+  width: 100%;
+  background-color: #004a55;
+}
+
+nav ul {
+  list-style-type: none;
+
+  text-align: center;
+  margin: 0;
+  padding: 0.5rem;
+}
+
+nav li {
+  font-size: 1.2em;
+  line-height: 40px;
+  height: 40px;
+  display: inline-block;
+  margin: 1.5%;
+}
+
+nav img {
+  width: 75px;
+  height: 50px;
+}
+
+nav a {
+  text-decoration: none;
+  color: navy;
+  display: block;
+}
+
+nav img:hover {
+  opacity: 0.4;
+}
+
+/* Landing Page */
+#hero-img {
+  height: 400px;
+  width: 100%;
+  background: url("../images/england_fc_logo.png") center center / 400px 400px
+    repeat-x;
+}
+.main {
+  padding: 50px 0 50px 0;
+  color: white;
+  overflow: hidden;
+}
+
+.match-selector {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 25% 25% 25% 25%;
+}
+
+.match-selector div {
+  padding: 2rem;
+  color: black;
+  border-top-style: solid;
+  border-bottom-style: solid;
+  border-width: 2px;
+  border-color: #007a8c;
+}
+.main div a {
+  text-decoration: none;
+  margin: 1%;
+  color: white;
+  font-weight: 900;
+  border: 1.2px solid navy;
+  border-style: solid none solid none;
+  transition: font-size 0.25s;
+  transition-timing-function: ease-in-out;
+  background-color: #004a55;
+  align-items: center;
+  text-align: center;
+}
+
+.main a:hover {
+  border-color: red;
+  color: red;
+  font-size: 1.1em;
+  background-color: rgba(0, 0, 0, 0.7);
+  opacity: 0.7;
+}
+
+.main div p {
+  padding: 1% 0 0 1rem;
+}
+
+.main img {
+  width: 8rem;
+  height: 5rem;
+}
+
+@media (max-width: 700px) {
   .main div a {
-    text-decoration: none;
-    margin: 1%;
-    color: white;
-    font-weight: 900;
-    border: 1.2px solid navy;
-    border-style: solid none solid none;
-    transition: font-size 0.25s;
-    transition-timing-function: ease-in-out;
-    background-color: #004a55;
-    align-items: center;
-    text-align: center;
+    display: inline-grid;
+    grid-template-rows: 45% auto auto;
+    grid-row-gap: 5px;
   }
-  
-  .main a:hover {
-    border-color: red;
-    color: red;
-    font-size: 1.1em;
-    background-color: rgba(0, 0, 0, 0.7);
-    opacity: 0.7;
-  }
-  
-  .main div p {
-    padding: 1% 0 0 1rem;
-  }
-  
-  .main img {
-    width: 8rem;
-    height: 5rem;
-  }
-  
-  @media (max-width: 700px) {
-    .main div a {
-      display: inline-grid;
-      grid-template-rows: 45% auto auto;
-      grid-row-gap: 5px;
-    }
-  
-    p {
-      font-size: small;
-    }
-  }
-  
-  @media (min-width: 700px) {
-    .main div a {
-      display: flex;
-    }
-  }
-  
-  /*England Page */
-  
-  .england {
-    border: 3px solid green;
-    display: flex;
-    justify-content: space-between;
-    overflow: hidden;
-    background-color: whitesmoke;
-    flex-direction: column;
-    align-items: center;
-  }
-  .england #div1 {
-    height: 100%;
-    border: 2px dashed blue;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: 2rem;
-    margin: 0.5rem;
-    background-color: whitesmoke;
-    width: 100%;
-  }
-  #div1 img {
-    height: 10%;
-    width: auto;
-  }
-  .england #div2 {
-    border: 2px dashed black;
-    display: flex;
-    flex-direction: column;
-    float: right;
-    padding: 2rem;
-    margin: 0.5rem;
-    width: 100%;
-    justify-content: center;
-  }
-  
-  iframe {
-    padding: 2em;
-    display: block;
-    margin: 0 auto;
-  }
-  
-  table {
-    width: 75%;
-    margin: 0 auto;
-  }
-  
-  th,
-  td,
-  caption {
-    text-align: left;
-    padding: 0.5rem 2rem 0.5rem 0.5rem;
+
+  p {
     font-size: small;
   }
-  
-  caption {
-    font-size: medium;
-    font-weight: bold;
+}
+
+@media (min-width: 700px) {
+  .main div a {
+    display: flex;
   }
-  
-  table,
-  th,
-  td {
-    border: 0.1px solid black;
-    border-style: solid none none none;
-    border-collapse: collapse;
-  }
-  
-  td,
-  th {
-    padding: 0.5rem;
-  }
-  
-  tr:nth-child(even) {
-    background-color: white;
-  }
-  tr:nth-child(odd) {
-    background-color: red;
-  }
-  
-  
-  /* Footer */
-  
-  footer {
-    bottom: 0;
-    padding: 2%;
-    color: red;
-    background-color: rgba(0, 0, 0, 0.7);
-  }
-  
-  footer a {
-    padding: 5%;
-    color: white;
-  }
-  
-  footer a:hover {
-    opacity: 0.5;
-  }
-  
-  footer div {
-    display: inline;
-  }
-  
+}
+
+/*England Page */
+
+.england {
+  border: 3px solid green;
+  display: flex;
+  justify-content: space-between;
+  overflow: hidden;
+  background-color: #007a8c;
+  flex-direction: column;
+  align-items: center;
+}
+
+.england #div1 {
+  height: 100%;
+  border: 2px dashed blue;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 2rem;
+  margin: 0.5rem;
+  background-color: whitesmoke;
+  width: 100%;
+  max-width: 700px;
+}
+#div1 img {
+  height: 10%;
+  width: auto;
+}
+.england #div2 {
+  border: 2px dashed black;
+  display: flex;
+  flex-direction: column;
+  float: right;
+  padding: 2rem;
+  margin: 0.5rem;
+  width: 100%;
+  justify-content: center;
+}
+
+.wrapper,
+.wrapper2 {
+  position: relative;
+  overflow: hidden;
+  padding-top: 56.25%;
+  margin: 2rem 0 2rem 0;
+  background-color: coral;
+}
+
+.wrapper iframe,
+.wrapper2 iframe {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  display: block;
+  margin: 0 auto;
+}
+
+table {
+  width: 75%;
+  margin: 0 auto;
+}
+
+th,
+td,
+caption {
+  text-align: left;
+  padding: 0.5rem 2rem 0.5rem 0.5rem;
+  font-size: small;
+}
+
+caption {
+  font-size: medium;
+  font-weight: bold;
+  color: white;
+}
+
+table,
+th,
+td {
+  border: 0.1px solid black;
+  border-style: solid none none none;
+  border-collapse: collapse;
+}
+
+td,
+th {
+  padding: 0.5rem;
+}
+
+tr:nth-child(even) {
+  background-color: #004a55;
+  color: red;
+}
+tr:nth-child(odd) {
+  background-color: #004a55;
+  color: white;
+}
+
+/* Footer */
+
+footer {
+  bottom: 0;
+  padding: 2%;
+  color: red;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+footer a {
+  padding: 5%;
+  color: white;
+}
+
+footer a:hover {
+  opacity: 0.5;
+}
+
+footer div {
+  display: inline;
+}
