--- a/css/style.css
+++ b/css/style.css
@@ -148,7 +148,7 @@ nav img:hover {
   align-items: center;
 }
 
-.england #div1 {
+.england #div1, .england #div2 {
   height: 100%;
   border: 2px dashed blue;
   display: flex;
@@ -163,16 +163,6 @@ nav img:hover {
 #div1 img {
   height: 10%;
   width: auto;
-}
-.england #div2 {
-  border: 2px dashed black;
-  display: flex;
-  flex-direction: column;
-  float: right;
-  padding: 2rem;
-  margin: 0.5rem;
-  width: 100%;
-  justify-content: center;
 }
 
 .wrapper,
