--- a/css/style.css
+++ b/css/style.css
@@ -247,7 +247,8 @@ tr:nth-child(odd) {
   border: 2px solid gold;
 }
 .opponent #div2 {
-  max-width: 700px;
+  display: flex;
+  flex-basis: 100%;
   margin: 0 auto;
   border: 2px solid brown;
 }
