--- a/css/style.css
+++ b/css/style.css
@@ -20,13 +20,15 @@ h1 {
 }
 
 h2,
-h3 {
+h3,
+h4 {
   color: white;
+  margin: 1%;
 }
 /* Navbar */
 nav {
   width: 100%;
-  background-color: #004a55;
+  background-color: red;
 }
 
 nav ul {
@@ -48,6 +50,7 @@ nav li {
 nav img {
   width: 75px;
   height: 50px;
+  border-radius: 15%;
 }
 
 nav a {
@@ -58,6 +61,7 @@ nav a {
 
 nav img:hover {
   opacity: 0.4;
+  border-radius: 5%;
 }
 
 /* Landing Page */
@@ -91,12 +95,14 @@ nav img:hover {
   text-decoration: none;
   margin: 1%;
   color: white;
-  font-weight: 900;
+  background-color: rgba(0, 0, 0, 0.7);
+  opacity: 0.7;
+
   border: 1.2px solid navy;
-  border-style: solid none solid none;
+  border-radius: 2.5%;
+  border-style: none none solid none;
   transition: font-size 0.25s;
   transition-timing-function: ease-in-out;
-  background-color: #004a55;
   align-items: center;
   text-align: center;
 }
@@ -104,9 +110,9 @@ nav img:hover {
 .main a:hover {
   border-color: red;
   color: red;
-  font-size: 1.1em;
-  background-color: rgba(0, 0, 0, 0.7);
-  opacity: 0.7;
+  font-size: 0.8em;
+  opacity: 1;
+  font-weight: 900;
 }
 
 .main div p {
@@ -131,6 +137,7 @@ nav img:hover {
 }
 
 @media (min-width: 700px) {
+
   .main div a {
     display: flex;
   }
@@ -161,24 +168,6 @@ nav img:hover {
   margin: 0.5rem;
   width: 100%;
   max-width: 700px;
-}
-
-.wrapper {
-  position: relative;
-  overflow: hidden;
-  padding-top: 56.25%;
-  margin: 2rem 0 2rem 0;
-  background-color: coral;
-}
-
-.wrapper iframe {
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  display: block;
-  margin: 0 auto;
 }
 
 table {
@@ -233,6 +222,27 @@ tr:nth-child(odd) {
     height: 90%;
   }
 }
+
+/* iframe Settings */
+
+.wrapper {
+  position: relative;
+  overflow: hidden;
+  padding-top: 56.25%;
+  margin: 2rem 0 2rem 0;
+  background-color: coral;
+}
+
+.wrapper iframe {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  display: block;
+  margin: 0 auto;
+}
+
 /* Opponents */
 
 .opponent {
@@ -250,7 +260,7 @@ tr:nth-child(odd) {
   display: flex;
   flex-basis: 100%;
   margin: 0 auto;
-  border: 2px solid brown;
+  border: 2px solid green;
 }
 
 .opponent img {
@@ -262,11 +272,15 @@ tr:nth-child(odd) {
   .opponent #div2 {
     display: flex;
     overflow: hidden;
+    border: 2px solid paleturquoise;
   }
   .opponent #div2 img {
     margin: 0 auto;
     width: 50%;
     max-width: 700px;
+  }
+  .opponent{
+    display: flex;
   }
 }
 
