Update landing page div border styling

--- a/css/style.css
+++ b/css/style.css
@@ -95,9 +95,6 @@ nav img:hover {
   text-decoration: none;
   margin: 1%;
   color: white;
-  background-color: rgba(0, 0, 0, 0.7);
-  opacity: 0.7;
-
   border: 1.2px solid navy;
   border-radius: 2.5%;
   border-style: none none solid none;
@@ -105,7 +102,14 @@ nav img:hover {
   transition-timing-function: ease-in-out;
   align-items: center;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  height: 16rem;
+  width: fit-content;
+  background-color: rgba(0, 0, 0, 0.7);
+  opacity: 0.7;
 }
+
 
 .main a:hover {
   border-color: red;
