--- a/css/style.css
+++ b/css/style.css
@@ -104,12 +104,11 @@ nav img:hover {
   text-align: center;
   display: flex;
   flex-direction: column;
-  height: 16rem;
+  height: 10rem;
   width: fit-content;
   background-color: rgba(0, 0, 0, 0.7);
   opacity: 0.7;
 }
-
 
 .main a:hover {
   border-color: red;
@@ -128,6 +127,12 @@ nav img:hover {
   height: 5rem;
 }
 
+@media (max-width: 320px) {
+  .match-selector {
+    width: 85%;
+  }
+}
+
 @media (max-width: 700px) {
   .main div a {
     display: inline-grid;
@@ -140,7 +145,15 @@ nav img:hover {
   }
 }
 
-@media (min-width: 700px) {
+@media (min-width: 800px) {
+  .match-selector {
+    display: grid;
+    grid-template-columns: 33% 33% 33%;
+    grid-template-rows: 33% 33% 33%;
+  }
+}
+
+@media (min-width: 1050px) {
   .match-selector {
     display: grid;
     grid-template-rows: 100%;
@@ -269,7 +282,8 @@ tr:nth-child(odd) {
   border: 2px solid gold;
 }
 
-#line-up, #stats {
+#line-up,
+#stats {
   max-width: 98%;
   margin: 0 auto;
 }
