--- a/css/style.css
+++ b/css/style.css
@@ -177,15 +177,15 @@ nav img:hover {
   margin: 0 auto;
 }
 
-.england #div1,
-.england #div2 {
-  height: 100%;
+.player-media,
+.player-stats {
+  height: 90%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   padding: 2rem;
   margin: 0.5rem;
-  width: 100%;
+  width: 90%;
   max-width: 700px;
 }
 
@@ -234,8 +234,8 @@ tr:nth-child(odd) {
   .england {
     flex-direction: row;
   }
-  .england #div1,
-  .england #div2 {
+  .player-stats,
+  .player-media {
     padding: 2rem 0 0 0;
     margin: 0;
     height: 90%;
